testsuite/tests/typecheck/should_fail/T13834.hs
{-# LANGUAGE TypeApplications #-}

module Bug where

foo = notInScope @Bool True

