testsuite/tests/typecheck/should_fail/T13834.stderr

T13834.hs:5:7: error: Variable not in scope: notInScope
